Added build for net45.

--- a/src/M.Executables.Executors.Simple/M.Executables.Executors.Simple.csproj
+++ b/src/M.Executables.Executors.Simple/M.Executables.Executors.Simple.csproj
@@ -1,25 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.0</TargetFrameworks>
+    <TargetFrameworks>netstandard1.0;net45</TargetFrameworks>
     <Authors>Petar Marinov</Authors>
     <Company />
     <Copyright>Copyright (c) 2017 Petar Marinov</Copyright>
     <PackageTags>command executor executables</PackageTags>
-    <PackageReleaseNotes>Upgraded to use M.Executables 2.0.0.</PackageReleaseNotes>
+    <PackageReleaseNotes>Upgraded to use M.Executables 2.0.1.</PackageReleaseNotes>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <Description>A very simple implementation of IExecutor and IExecutorAsync.</Description>
     <PackageLicenseUrl>https://github.com/petar-m/executables.executors/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/petar-m/executables.executors</PackageProjectUrl>
     <RepositoryUrl>https://github.com/petar-m/executables.executors</RepositoryUrl>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <FileVersion>2.0.0.0</FileVersion>
-    <Version>2.0.0</Version>
+    <AssemblyVersion>2.0.1.0</AssemblyVersion>
+    <FileVersion>2.0.1.0</FileVersion>
+    <Version>2.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="M.Executables" Version="2.0.0" />
+    <PackageReference Include="M.Executables" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
