--- a/src/M.Executables.Executors.SimpleInjector/M.Executables.Executors.SimpleInjector.csproj
+++ b/src/M.Executables.Executors.SimpleInjector/M.Executables.Executors.SimpleInjector.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFrameworks>netstandard1.3;net45</TargetFrameworks>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <Authors>Petar Marinov</Authors>
@@ -13,10 +13,11 @@
     <RepositoryUrl>https://github.com/petar-m/executables.executors</RepositoryUrl>
     <PackageTags>command executor executables</PackageTags>
     <PackageReleaseNotes>Initial release.</PackageReleaseNotes>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="M.Executables" Version="2.0.0" />
+    <PackageReference Include="M.Executables" Version="2.0.1" />
     <PackageReference Include="SimpleInjector" Version="4.0.8" />
   </ItemGroup>
 
